src/objects/Apttus_DealMgr__SearchFilter__c.object
<CustomObject>
    <description>Represents a search filter</description>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObject__c</fullName>
        <description>The business object which provides the context for the filter</description>
        <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Deal__c</fullName>
                </value>
                <value>
                    <fullName>DealLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the filter criteria</description>
        <inlineHelpText>The list of field names used in the filter criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Criteria__c</fullName>
        <description>The filter criteria specification</description>
        <inlineHelpText>The filter criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the filter</description>
        <inlineHelpText>The description for the filter</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Search Filter (Deal)</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>